fix gap beetwene checkout and cart list

--- a/src/pages/Cart/Cart.scss
+++ b/src/pages/Cart/Cart.scss
@@ -11,6 +11,7 @@
   &__wrapper {
     display: flex;
     justify-content: space-between;
+    gap: 10px;
   }
 
   &__list {
